@@ -4,6 +4,9 @@ Changelog
 3.2.2 (unreleased)
 ------------------
 
+- Use always logged in user as responsible of a subdossier.
+  [lknoepfel]
+
 - Remove obsolete dependency on transmogrify.sqlinserter.
   [lgraf]
 
